--- a/sup.html
+++ b/sup.html
@@ -4,29 +4,71 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
+    <title>Neon Snake | Premium Arcade</title>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600;800&family=Press+Start+2P&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-    <div class="game-container">
-        <div class="ui-panel">
-            <div class="score-board">
-                <span>Score: <span id="score">0</span></span>
+    <div class="bg-glow"></div>
+    <div class="game-wrapper">
+        <header class="game-header">
+            <h1 class="logo">NEON<span>SNAKE</span></h1>
+            <div class="stats-container">
+                <div class="stat-box">
+                    <span class="label">SCORE</span>
+                    <span id="score" class="value">0</span>
+                </div>
+                <div class="stat-box">
+                    <span class="label">LEVEL</span>
+                    <span id="level" class="value">1</span>
+                </div>
+                <div id="speed-control" class="stat-box control hidden">
+                    <span class="label">SPEED</span>
+                    <div class="speed-btns">
+                        <button id="speed-down">-</button>
+                        <span id="speed-val" class="value">1</span>
+                        <button id="speed-up">+</button>
+                    </div>
+                </div>
+                <div class="stat-box highlight">
+                    <span class="label">BEST</span>
+                    <span id="high-score" class="value">0</span>
+                </div>
             </div>
-            <div class="level-board">
-                <span>Level: <span id="level">1</span></span>
+        </header>
+
+        <main class="canvas-area">
+            <div class="canvas-shadow"></div>
+            <canvas id="gameCanvas" width="400" height="400"></canvas>
+
+            <div id="game-overlay" class="overlay">
+                <div class="overlay-content">
+                    <h2 id="game-message">GET READY</h2>
+                    <p class="secondary">Master the glow, avoid the walls.</p>
+                    <div class="controls-hint">
+                        <div class="hint-item">
+                            <span>KEYS</span>
+                            <p>ARROWS</p>
+                        </div>
+                        <div class="divider"></div>
+                        <div class="hint-item">
+                            <span>TOUCH</span>
+                            <p>SWIPE</p>
+                        </div>
+                    </div>
+                    <button id="start-btn" class="primary-btn">START GAME</button>
+                    <p class="tap-hint">or press SPACE</p>
+                </div>
             </div>
-            <div class="high-score-board">
-                <span>Best: <span id="high-score">0</span></span>
-            </div>
-        </div>
-        <canvas id="gameCanvas" width="400" height="400"></canvas>
-        <div id="game-overlay">
-            <h1 id="game-message">Snake Game</h1>
-            <p>Press Space or Click to Start</p>
-        </div>
+        </main>
+
+        <footer class="game-footer">
+            <p>DESIGNED BY SUPREETH VIJAY</p>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
